hphp/test/slow/object_property/703.php.expectf
HipHop Warning: Cannot access property on non-object in %s/test/slow/object_property/703.php on line 4
NULL
HipHop Warning: Cannot access property on non-object in %s/test/slow/object_property/703.php on line 4
NULL
HipHop Warning: Creating default object from empty value in %s/test/slow/object_property/703.php on line 4
HipHop Fatal error: Cannot access empty property in %s/test/slow/object_property/703.php on line 4
